test/bad/generics/type06.px

func f<T>(x: T): Void def
    n = 0.0
    n = x

f('x')
